@@ -1,3 +1,4 @@
+* Made numpad locale aware
 * Add open button on binary and image widgets
 * Hide buttons on image widget if readonly
 * Added a connection manager à la gajim
